--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.5.3",
     "stream-chat": "^4.1.0",
     "stream-chat-react": "^6.5.1",
     "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
