--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "getstream": "^7.2.10",
+    "mongoose": "^5.13.15",
     "nodemon": "^2.0.12",
+    "socket.io": "^4.5.3",
     "stream-chat": "^4.1.0",
     "twilio": "^3.67.1"
   }
