--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "firebase": "^8.7.0",
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
+    "redux": "^4.1.0",
     "socket.io-client": "^4.5.3",
     "stream-chat": "^4.1.0",
     "stream-chat-react": "^6.5.1",
