--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
     "socket.io-client": "^4.5.3",
     "stream-chat": "^4.1.0",
     "stream-chat-react": "^6.5.1",
