--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "getstream": "^7.2.10",
     "mongoose": "^5.13.15",
     "nodemon": "^2.0.12",
+    "peer": "^0.6.1",
     "socket.io": "^4.5.3",
     "stream-chat": "^4.1.0",
-    "twilio": "^3.67.1"
+    "twilio": "^3.67.1",
+    "uuid": "^8.3.2"
   }
 }
